# UnityEquilibriumTheory-Feli

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  UET_Chatbot_Log.txt  docker-compose.yml  mcp_stderr.txt  mcp_stdout.txt  pyproject.toml  requirements.txt  setup.py  start_mcp_server.bat  unify_docs_folders.ps1  ภาพรวม.canvas
(search Only) ทองข้อมูลดี/: (V0.5) (NEW) หมวดที่ 1 หน่วยที่ 1.2 ธรรมชาติของความไม่สมบูรณ์.md
(search Only) ทองข้อมูลดี/.md/: UET_Merged_2025-12-16_0.8.5.md
(search Only) ทองข้อมูลดี/Doc/: README.md  Standardizing Mathnicry Scripts.md
(search Only) ทองข้อมูลดี/dev/: Untitled.md
.agent/skills/: context7.md  notebooklm.md
.claude/: settings.local.json
openclaw-marketing/: CURRENT_ISSUES.md  PLAN.md  README.md
openclaw-marketing/config/: mcp_config.json  openclaw.json
openclaw-marketing/memory/: AGENTS.md  MEMORY.md
openclaw-marketing/scripts/: install_skills.sh  moltbook_poster.py
research/00_core_paper/: LIMITATIONS.md  QUICKSTART.md  RESEARCH_SUMMARY.md  RESPONSE_TO_CRITICISM.md  TIMELINE.md
research/ปรับ/: Critical analysis of thermodynamic unification claims in physics.md  Unity Equilibrium Theory การวิเคราะห์เชิงวิพากษ์ทฤษฎีที่ไม่มีอยู่จริง.md
research_uet/: README.md  UET_PAPER.tex  __init__.py  references.bib
research_uet/core/: README.md  __init__.py  scientific_validation.py  uet_base_solver.py  uet_bug_hunter.py  uet_data_orchestrator.py  uet_glass_box.py  uet_lite_engine.py  uet_master_equation.py  uet_matrix_engine.py  uet_parameters.py  uet_references.py
research_uet/docs/: CRITICAL_VULNERABILITY_ANALYSIS.md  PROJECT_DEEP_DIVE_REPORT.md  UET_IMPACT_REPORT.md
research_uet/knowledge_base/: README.md  __init__.py  api_client.py  config.py  config.toml  config.toml.example  cost_dashboard.py  cost_log.jsonl  ingest.py  inspect_db.py  migrate_to_postgres.py  omega_search.py  tensorizer.py  vector_store.py
research_uet/paper/: main.tex
research_uet/scripts/: README.md  debug_mcp_v2.py  migrate_all_standards_v2.py  migrate_to_golden_result.py  run_physics_anomalies.py  verify_mcp_connection.py
research_uet/templates/: engine_template.py  research_template.py
research_uet/topics/: README.md  audit_data_integrity.py  how to README.md  run_all_tests.py  run_full_verification.py
research_uet/topics/0.18_Mathnicry/rust_miner/: BENCHMARK_REPORT.md  Cargo.toml  NICEHASH_SETUP.md
research_uet/topics/0.18_Mathnicry/rust_miner/src/gpu/: compute.rs
research_uet/topics/0.18_Mathnicry/rust_miner/src/hash/: mod.rs  sha256.rs
research_uet/topics/0.18_Mathnicry/rust_miner/src/mining/: block.rs  mod.rs
research_uet/topics/0.18_Mathnicry/rust_miner/src/stratum/: client.rs  protocol.rs
research_uet/update system/: 00.md  01.md  02_final_architecture_blueprint.md  UET_Platform_v5_Vision.md.resolved  architecture_analysis.md  implementation_plan.md  implementation_plan.md.resolved  task.md.resolved
research_uet/v/: 00.md  01.md  embeddings_and_models_analysis.md.resolved
scripts/: audit_code_content.py  audit_compliance.py  audit_data_usage.py  audit_documentation_coverage.py  audit_structure.py  batch_migrate_5x4.py  batch_migrate_v2.py  cleanup_outputs.py  extract_topic23.py  extract_topic24.py  extract_topic25.py  find_dependency.py  fix_baseline_folders.py  fix_results.py  flatten_topics.py  inspect_zips.py  list_topic_files.py  setup.py  test_import_debug.py  test_lite_rollout.py  undo_fix_folders.py  verify_all_imports.py  verify_cleanse.py  verify_my_work.py  verify_topic_01.py  verify_topic_02.py  verify_topic_03.py
scripts/txt/: all_test_files.txt  audit_report.txt  verification_results.txt  verification_results_v2.txt
uet_agents/: README.md  __init__.py  base_agent.py  main.py  marketing_agent.py  orchestrator.py  research_agent.py  test_marketing.py
uet_build/: .rustc_info.json  README.md
uet_chain/: Cargo.toml
uet_chain/src/: canonical.rs  ledger.rs  lib.rs  types.rs
uet_core/: Cargo.toml  README.md
uet_core/src/: calculator.rs  dynamics.rs  fields.rs  lib.rs  master_equation.rs  parameters.rs
uet_core/tests/: test_physics.rs
uet_history/: README.md  STATUS_REPORT.md
uet_history/documents/: README.md
uet_history/obsolete/: 09_theory_index.md  UET_Merged_2025-11-27_Theory.md
uet_history/old_code/: _bootstrap.py  _plot_common.py  add_band_to_matrix.py  add_enhanced_viz.py  add_omega_to_einstein.py  agents.py  aggregate_final_summary.py  apply_preset_updates.py  audit_scripts.py  auto_band_map_from_ledger.py  band_map.py  baselines.py  calibrate_metric_thresholds.py  ccbh_analysis.py  check_variational.py  ledger.py  (+81 more)
uet_kb/: Cargo.toml  README.md
uet_kb/src/: db.rs  main.rs  mcp.rs
uet_miner/: Cargo.toml  UET_NETWORK_WHITEPAPER.md.resolved  production_miner_plan.txt
uet_miner/src/: anti_cheat.rs  benchmark.rs  lib.rs  main.rs  uet_cash_block.rs
uet_miner/src/gpu/: mod.rs  shader.rs  shader.wgsl
uet_miner/src/mining/: mod.rs  uet_cash.rs
uet_miner/src/stratum/: mod.rs
uet_security/: Cargo.toml
uet_under_development/: README.md
uet_under_development/uet_economic/: Cargo.toml  README.md
uet_under_development/uet_economic/src/: difficulty.rs  governance_integration.rs  issuance.rs  lib.rs  portfolio.rs  types.rs
uet_under_development/uet_market/: Cargo.toml  README.md
uet_under_development/uet_market/src/: amm.rs  economic_integration.rs  governance_integration.rs  lib.rs  market.rs  price.rs  types.rs
uet_under_development/uet_oracle/: Cargo.toml  README.md
uet_under_development/uet_oracle/src/: ledger_integration.rs  lib.rs  registry.rs  types.rs  verifier.rs
zip/: 0.0_Grand_Unification_only.md  0.14_Complex_Systems_reset_only.md  0.15_Cluster_Dynamics_reset_only.md  0.17_Mass_Generation_reset_only.md  0.19_Gravity_GR_reset_only.md  0.20_Atomic_Physics_reset_only.md  0.22_Biophysics_Origin_of_Life_reset_only.md  0.25_Strategy_Power_Economics_reset_only.md  0.26_Cosmic_Dynamic_Frame_reset_only.md  0.2_Black_Hole_Physics_reset_only.md  0.3_Cosmology_Hubble_Tension_reset_only.md  0.7_Neutrino_Physics_reset_only.md  docs_reset_only.md
(+26421 files in other folders)
