[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uet-harness"
version = "0.8.7"
description = "Unity Equilibrium Theory - A thermodynamic framework for fundamental physics simulation"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "UET Research Team"}
]
keywords = [
    "physics",
    "simulation",
    "thermodynamics",
    "unified theory",
    "Cahn-Hilliard"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/[username]/uet-harness"
Documentation = "https://github.com/[username]/uet-harness#readme"
Repository = "https://github.com/[username]/uet-harness.git"
Issues = "https://github.com/[username]/uet-harness/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
ignore_missing_imports = true
