[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-uet"
version = "0.9.0"
description = "Unity Equilibrium Theory - A thermodynamic framework for fundamental physics simulation"
readme = "README.md"
license = {text = "MIT License"}
authors = [
    {name = "UET Research Team", email = "contact@unityequilibrium.io"}
]
keywords = [
    "physics",
    "simulation",
    "thermodynamics",
    "unified theory",
    "Cahn-Hilliard"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/unityequilibrium/Equation-UET-v0.9.0"
Repository = "https://github.com/unityequilibrium/Equation-UET-v0.9.0.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["research_uet*"]
namespaces = false

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
ignore_missing_imports = true
