[package]
name = "uet_miner"
version = "0.1.0"
edition = "2021"
authors = ["UET Research Team"]
description = "UET GPU Bitcoin Miner with Stratum V1 support"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
sha3 = "0.10"
blake3 = "1.5"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utils
futures = "0.3"
rayon = "1.10"

# GPU (Phase 2 - AMD RX 6600 XT via Vulkan)
wgpu = "0.20"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.3"

# UET Core for equation solving
uet_core = { path = "../uet_core" }
ndarray = "0.15"
uet_security = { path = "../uet_security" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
