[package]
name = "uet_economic"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
uet_chain = { path = "../uet_chain" }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
